test/best_practices/disallow_host_network_port.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  annotations:
    policies.kyverno.io/category: Workload Isolation
    policies.kyverno.io/description: Using 'hostPort' and 'hostNetwork' allows pods
      to share the host network stack, allowing potential snooping of network traffic
      from an application pod.
  name: disallow-host-network-port
spec:
  admission: true
  background: true
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Pod
    name: validate-host-network
    validate:
      message: Use of hostNetwork is not allowed
      pattern:
        spec:
          =(hostNetwork): false
  - match:
      any:
      - resources:
          kinds:
          - Pod
    name: validate-host-port
    validate:
      message: Use of hostPort is not allowed
      pattern:
        spec:
          containers:
          - =(ports):
            - X(hostPort): "null"
            name: '*'
  validationFailureAction: Audit
